--- a/app/client/css/nav.css
+++ b/app/client/css/nav.css
@@ -59,7 +59,7 @@ body, html{
 	-webkit-text-fill-color: transparent;
 }
 .filter-tag{
-	padding: 6px 12px;
+	padding: 6px 1%;
 	font-size:18px;
 	float:left;
 	margin-top:5px;
