--- a/app/client/css/loginmodal.css
+++ b/app/client/css/loginmodal.css
@@ -1,6 +1,16 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 
 /****** LOGIN MODAL ******/
+.closeButton{
+  position: absolute;
+  top:0; 
+  right:23%;
+  color: #959595;
+  font-size: 2em;
+}
+.closeButton:hover{
+    transform: scale(1.2);
+}
 .modal-content{
     background-color: rgba(0,0,0,0);
     border: none;
