--- a/app/client/css/slideshow.css
+++ b/app/client/css/slideshow.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #F9F9FA
+  background-color: #333
 }
 /*
 .campsite-img{
@@ -10,7 +10,7 @@ body{
 .slideshow {
   max-width: 100%;
   height: 180px;
-  background: #686868;
+  background: #333;
   position: relative;
 }
 .slideshow-slides {
