--- a/app/client/css/campsitemodal.css
+++ b/app/client/css/campsitemodal.css
@@ -1,5 +1,51 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 
+.campsite-tag{
+  padding: .4% 1%;
+  font-size:1.2em;
+  float:left;
+  margin-top:.5%;
+  margin-left:.5%;
+  border: 1px solid #333;
+  color: #333 !important;
+  opacity: 1 !important;
+  border-radius: 4px;
+  background-color: transparent;
+  position:relative;
+}
+
+.tag-box{
+   display: -webkit-flex;
+   display: flex;
+   -webkit-align-items: center;
+   align-items: center;
+   -webkit-justify-content: center;
+   justify-content: center;
+   /* You can set flex-wrap and flex-direction individually */
+   -webkit-flex-direction: row;
+   flex-direction: row;
+   -webkit-flex-wrap: wrap;
+   flex-wrap: wrap;
+   /* Or do it all in one line with flex flow */
+   -webkit-flex-flow: row wrap;
+   flex-flow: row wrap;
+   /* tweak the where items line up on the row */
+   /* valid values are: flex-start, flex-end, space-between, space-around, stretch */
+   -webkit-align-content: flex-end;
+   align-content: flex-end;
+}
+.campsite-tag:hover{
+  border: 1px solid white;
+  color: #333;
+  background-color:#959595;
+}
+.campsite-tag-active{
+  color: white !important;
+
+  border: 1px solid white;
+  color: #333;
+  background-color:#959595;
+}
 .small-map-container{
   height: 200px;
 }
@@ -14,7 +60,10 @@ p{
   font-weight: lighter;
  
 }
-
+.description-chars{
+  font-weight: lighter;
+  color:#333;
+}
 label{
   color:white;
 }
