Image resize to 200 wide and made email a unique field.

--- a/app/client/css/campsitemodal.css
+++ b/app/client/css/campsitemodal.css
@@ -86,8 +86,8 @@ label{
   color:#333;
 }
 .preview-image{
-  width:50px;
-  height: auto;
+  width: auto;
+  height: 100px;
   float: center;
   padding: 0px 5px;
 }
