--- a/app/client/css/loginmodal.css
+++ b/app/client/css/loginmodal.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto);
-
 /****** LOGIN MODAL ******/
 .closeButton{
   position: absolute;
@@ -21,11 +19,15 @@
 }
 
 .register-image-drop{
-  border: dashed white;
+  border: dashed #FFF1D0;
   height: 80px;
   text-align: center;
   border-radius: 10px;
 
+}
+
+.cream{
+  color:#FFF1D0 !important;
 }
 
 .white{
