--- a/app/client/css/loginmodal.css
+++ b/app/client/css/loginmodal.css
@@ -9,6 +9,9 @@
 .closeButton:hover{
     transform: scale(1.2);
 }
+.resetpassword-image{
+  width: 100%;
+}
 .modal-content{
     background-color: rgba(0,0,0,0);
     border: none;
